--- a/SMP/libssl.vcxproj.filters
+++ b/SMP/libssl.vcxproj.filters
@@ -25,198 +25,22 @@
     <Filter Include="Header Files\include\ssl">
       <UniqueIdentifier>{e73c68f7-13f7-4b80-98ce-f9fa1309dea8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\include\crypto">
-      <UniqueIdentifier>{0480a567-87be-4d2a-85bb-775af257c1eb}</UniqueIdentifier>
+    <Filter Include="Source Files\ssl\record">
+      <UniqueIdentifier>{61a2ee6f-5158-40bd-bebe-3e96e484b404}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ssl\statem">
+      <UniqueIdentifier>{6a09b9ce-006e-4d46-91b9-f76c30210a9d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\include\ssl\record">
+      <UniqueIdentifier>{6b6404d3-9125-46e3-b59f-89dc983e9db1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\include\ssl\statem">
+      <UniqueIdentifier>{94d8f6f1-a144-4254-9274-f10d27cad140}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ssl\d1_meth.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_pkt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_srtp.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_srvr.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\kssl.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_clnt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_enc.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_meth.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_pkt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s2_srvr.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_both.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_cbc.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_clnt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_enc.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_meth.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_pkt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s3_srvr.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s23_clnt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s23_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s23_meth.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s23_pkt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\s23_srvr.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_algs.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_asn1.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_cert.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_ciph.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_err.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_err2.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_rsa.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_sess.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_stat.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_txt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_clnt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_enc.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_meth.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_reneg.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_srvr.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\tls_srp.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\bio_ssl.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_both.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_clnt.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\d1_lib.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_utst.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_ext.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\t1_trce.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-    <ClCompile Include="..\ssl\ssl_conf.c">
-      <Filter>Source Files\ssl</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\e_os.h">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
     <ClInclude Include="..\ms\uplink.h">
       <Filter>Header Files\include\ms</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\aes.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\asn1.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\asn1_mac.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\asn1t.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\bio.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\blowfish.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\bn.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\buffer.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\camellia.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\cast.h">
-      <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\cms.h">
       <Filter>Header Files\include\openssl</Filter>
@@ -233,19 +57,16 @@
     <ClInclude Include="..\include\openssl\crypto.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\des.h">
+    <ClInclude Include="..\include\openssl\ct.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\des_old.h">
+    <ClInclude Include="..\include\openssl\des.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\dh.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\dsa.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\dso.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\dtls1.h">
@@ -281,13 +102,13 @@
     <ClInclude Include="..\include\openssl\idea.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\krb5_asn.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\kssl.h">
+    <ClInclude Include="..\include\openssl\kdf.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\lhash.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\md2.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\md4.h">
@@ -323,13 +144,10 @@
     <ClInclude Include="..\include\openssl\pem2.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\pkcs12.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\openssl\pkcs7.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\pqueue.h">
+    <ClInclude Include="..\include\openssl\pkcs12.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\rand.h">
@@ -339,6 +157,9 @@
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\rc4.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\rc5.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\ripemd.h">
@@ -356,13 +177,16 @@
     <ClInclude Include="..\include\openssl\sha.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\openssl\srp.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\srtp.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
     <ClInclude Include="..\include\openssl\ssl.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\ssl2.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\include\openssl\ssl23.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
     <ClInclude Include="..\include\openssl\ssl3.h">
@@ -386,9 +210,6 @@
     <ClInclude Include="..\include\openssl\ui.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\openssl\ui_compat.h">
-      <Filter>Header Files\include\openssl</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\openssl\whrlpool.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
@@ -401,41 +222,62 @@
     <ClInclude Include="..\include\openssl\x509v3.h">
       <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\srtp.h">
-      <Filter>Header Files\include\ssl</Filter>
+    <ClInclude Include="..\include\openssl\aes.h">
+      <Filter>Header Files\include\openssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\ssl.h">
+    <ClInclude Include="..\include\openssl\asn1.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\asn1_mac.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\asn1t.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\async.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\bio.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\blowfish.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\bn.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\buffer.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\camellia.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\cast.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\openssl\cmac.h">
+      <Filter>Header Files\include\openssl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ssl\packet_locl.h">
       <Filter>Header Files\include\ssl</Filter>
     </ClInclude>
     <ClInclude Include="..\ssl\ssl_locl.h">
       <Filter>Header Files\include\ssl</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\ssl2.h">
-      <Filter>Header Files\include\ssl</Filter>
+    <ClInclude Include="..\ssl\record\record.h">
+      <Filter>Header Files\include\ssl\record</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\ssl3.h">
-      <Filter>Header Files\include\ssl</Filter>
+    <ClInclude Include="..\ssl\record\record_locl.h">
+      <Filter>Header Files\include\ssl\record</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\ssl23.h">
-      <Filter>Header Files\include\ssl</Filter>
+    <ClInclude Include="..\ssl\statem\statem_locl.h">
+      <Filter>Header Files\include\ssl\statem</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\tls1.h">
-      <Filter>Header Files\include\ssl</Filter>
+    <ClInclude Include="..\ssl\statem\statem.h">
+      <Filter>Header Files\include\ssl\statem</Filter>
     </ClInclude>
-    <ClInclude Include="..\ssl\dtls1.h">
-      <Filter>Header Files\include\ssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ssl\kssl.h">
-      <Filter>Header Files\include\ssl</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ssl\kssl_lcl.h">
-      <Filter>Header Files\include\ssl</Filter>
-    </ClInclude>
-    <ClInclude Include="crypto\opensslconf.h">
+    <ClInclude Include="openssl\opensslconf.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\crypto\constant_time_locl.h">
-      <Filter>Header Files\include\crypto</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -447,7 +289,126 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="libopenssl.rc">
+    <ClCompile Include="..\ssl\bio_ssl.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\d1_lib.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\d1_msg.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\d1_srtp.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\methods.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\pqueue.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\s3_cbc.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\s3_enc.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\s3_lib.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\s3_msg.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_asn1.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_cert.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_ciph.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_conf.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_err.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_init.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_lib.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_mcnf.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_rsa.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_sess.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_stat.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_txt.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\ssl_utst.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\t1_enc.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\t1_ext.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\t1_lib.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\t1_reneg.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\t1_trce.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\tls_srp.c">
+      <Filter>Source Files\ssl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\record\ssl3_buffer.c">
+      <Filter>Source Files\ssl\record</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\record\ssl3_record.c">
+      <Filter>Source Files\ssl\record</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\record\dtls1_bitmap.c">
+      <Filter>Source Files\ssl\record</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\record\rec_layer_d1.c">
+      <Filter>Source Files\ssl\record</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\record\rec_layer_s3.c">
+      <Filter>Source Files\ssl\record</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\statem\statem_srvr.c">
+      <Filter>Source Files\ssl\statem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\statem\statem.c">
+      <Filter>Source Files\ssl\statem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\statem\statem_clnt.c">
+      <Filter>Source Files\ssl\statem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\statem\statem_dtls.c">
+      <Filter>Source Files\ssl\statem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\ssl\statem\statem_lib.c">
+      <Filter>Source Files\ssl\statem</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="libssl.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
